--- a/Projet/Style.css
+++ b/Projet/Style.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+    font-family: 'Karla', sans-serif;
     background-image: url('Fond.png');
     background-size: cover;
     height: 100%;
@@ -19,7 +20,7 @@ body {
 .connexion {
     width: 500px;
     text-align: center;
-    background: rgba(255,255,255,0.3);
+    background: rgba(255,255,255,0.5);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -30,7 +31,7 @@ body {
     padding: 20px 0px;
 }
 
-.login, .mdp {
+.champ {
     padding: 20px 0 10px;
     width: 100%;
     margin: 0 auto;
@@ -50,7 +51,7 @@ body {
 }
 
 .connexion h3 {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 button, .texte {
@@ -65,7 +66,7 @@ button {
     width: 50%;
     padding: 10px 0;
     border-radius: 10px;
-    margin: 30px auto;
+    margin: 30px auto 10px;
     transition: all 0.3s;
     backdrop-filter: blur(1px);
     background: transparent;
@@ -73,8 +74,21 @@ button {
 
 button:hover, .texte:hover {
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .texte:focus {
     outline: none;
+}
+
+a {
+    font-size: small;
+    font-weight: 900;
+    text-decoration: none;
+    color: black;
+    transition: all 0.2s;
+}
+
+a:hover {
+    color: rgb(128, 121, 121);
 }
