--- a/Projet/styleAccueil.css
+++ b/Projet/styleAccueil.css
@@ -8,16 +8,18 @@ html, body {
     width: 100%;
     font-family: 'Karla', sans-serif;
     font-weight: 900;
-    background-image: url('Fond.png');
-    background-size: cover;
 }
 
 .navbar {
+    background-image: url('Fond.png');
+    position:absolute;
+    width: 100%;
     height: 100px;
-    background: rgba(255,255,255, 0.3);
     display: flex;
     align-items: center;
     justify-content: right;
+    z-index: 10;
+    box-shadow: 0px 1px 10px grey;
 }
 
 .menu {
@@ -32,15 +34,53 @@ html, body {
 
 .menu li {
     padding: 5px 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: background-color 0.2s;
 }
 
 .menu a {
     text-decoration: none;
-    color: black;
+    color: #fff;
 }
 
 .menu li:hover {
     background-color: rgba(255,255,255, 0.3);
+}
+
+.toolbar {
+    height: 33%;
+    width: 60px;
+    position: absolute;
+    top: 33%;
+    left: 5%;
+    background: #fff;
+    border-radius: 15px;
+    z-index: 1;
+    display: flex;
+    align-items: flex-end;
+    box-shadow: 0px 0px 10px grey;
+}
+
+#developper {
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #fff;
+    font-weight: 900;
+    margin-right: 10px;
+    transition: background 0.2s;
+    z-index: 1;
+    margin: 0 auto;
+}
+
+#developper:hover {
+    background: #ddd;
+}
+
+#map {
+    z-index: 0;
+    width: 100%;
+    height: 100%;
 }
