--- a/Projet/styleAccueil.css
+++ b/Projet/styleAccueil.css
@@ -13,6 +13,7 @@ html, body {
 .navbar {
     background-image: url('Fond.png');
     position:absolute;
+    top: 0;
     width: 100%;
     height: 100px;
     display: flex;
@@ -57,8 +58,23 @@ html, body {
     border-radius: 15px;
     z-index: 1;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
     box-shadow: 0px 0px 10px grey;
+    gap: 2%;
+}
+
+#restaurant{
+    width: 60%;
+    padding: 2px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+#restaurant:hover {
+    background: #ddd;
 }
 
 #developper {
@@ -83,4 +99,101 @@ html, body {
     z-index: 0;
     width: 100%;
     height: 100%;
+}
+
+.selectionne {
+    background-color: rgb(177, 175, 175);
+}
+
+#form {
+    position: absolute;
+    height: 40%;
+    width: 33%;
+    top: 30%;
+    left: 33%;
+    background-color: #fff;
+    border-radius: 20px;
+    z-index: 2;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    color: #fff;
+    background-image: url('Fond.png');
+    background-size: cover;
+    text-shadow: 0px 1px 5px rgb(0, 0, 0);
+    z-index: 30;
+}
+
+#form h1 {
+    padding-top: 10px;
+}
+
+.texte, #valider {
+    border-radius: 20px;
+    width: 100%;
+    padding: 10px 5px;
+    transition: all 0.2s;
+    border-left: 1px solid #fff;
+    border-top: 1px solid #fff;
+    border-right: none;
+    border-bottom: none;
+    box-shadow: 0px 1px 5px rgb(139, 132, 132);
+}
+
+.texte:hover, #valider:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.texte:focus {
+    outline: none;
+}
+
+#valider {
+    width: 33%;
+    height: 10%;
+    margin: auto;
+}
+
+#croix {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    color: rgb(177, 175, 175);
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+#croix:hover {
+    color: #fff;
+}
+
+.champ h3 {
+    text-align: center;
+    padding: 10px 0;
+}
+
+.champ {
+    width: 66%;
+    padding: 10px;
+}
+
+textarea {
+    resize: none;
+    height: 50%;
+    margin-bottom: 10%;
+}
+
+#ombre {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 20;
+    visibility: hidden;
 }
