--- a/Projet/styleAccueil.css
+++ b/Projet/styleAccueil.css
@@ -8,6 +8,7 @@ html, body {
     width: 100%;
     font-family: 'Karla', sans-serif;
     font-weight: 900;
+    overflow:hidden;
 }
 
 .navbar {
@@ -23,6 +24,11 @@ html, body {
     box-shadow: 0px 1px 10px grey;
 }
 
+.navbar a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .menu {
     width: 50%;
     list-style: none;
@@ -36,12 +42,13 @@ html, body {
 .menu li {
     padding: 5px 10px;
     border-radius: 5px;
+    color: #fff;
     transition: background-color 0.2s;
+    cursor: pointer;
 }
 
 .menu a {
     text-decoration: none;
-    color: #fff;
 }
 
 .menu li:hover {
@@ -141,11 +148,12 @@ html, body {
 }
 
 #form h1{
-    padding-top: 10px;
+    padding-top: 2%;
 }
 
 .texte, #valider, .butetoile{
     border-radius: 20px;
+    height: 40%;
     width: 100%;
     padding: 10px 5px;
     transition: all 0.2s;
@@ -198,6 +206,7 @@ html, body {
 
 .champ {
     width: 66%;
+    height: 20%;
     padding: 10px;
 }
 
@@ -221,4 +230,60 @@ textarea {
 
 .incorecte {
     border: 2px solid red;
+}
+
+/* Page Connecté */
+
+#compte {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1%;
+    height: 1%;
+    z-index: 3;
+    background-image: url("Fond.png");
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    color: #fff;
+    text-shadow: 0px 1px 5px rgb(0, 0, 0);
+    transition: width 0.5s;
+    box-shadow: -1px 0px 10px black;
+}
+
+#compte > a,h2 {
+    cursor: pointer;
+}
+
+.barre {
+    background-color: #fff;
+    height: 1px;
+    width: 75%;
+    cursor: none;
+}
+
+#fermercompte {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    transition: color 0.2s;
+}
+
+#fermercompte:hover {
+    color: grey;
+}
+
+#compte a {
+    transition: background 0.2s;
+    padding: 10px 20px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #fff;
+}
+
+#compte a:hover {
+    background:rgba(255,255,255, 0.3)
 }
