--- a/Projet/styleAccueil.css
+++ b/Projet/styleAccueil.css
@@ -56,17 +56,17 @@ html, body {
 }
 
 #toolbar {
-    height: 33%;
+    height: 20%;
     width: 60px;
     position: absolute;
-    top: 33%;
+    top: 40%;
     left: 5%;
     background: #fff;
     border-radius: 15px;
     z-index: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: center;
     box-shadow: 0px 0px 10px grey;
     gap: 2%;
@@ -85,8 +85,8 @@ html, body {
     background: #ddd;
 }
 
-#suppr {
-    width: 40%;
+#theatre {
+    width: 50%;
     padding: 6px;
 }
 
@@ -98,24 +98,6 @@ html, body {
 #magasin {
     width: 50%;
     padding: 5px;
-}
-
-#developper {
-    cursor: pointer;
-    width: 100%;
-    border: none;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: #fff;
-    font-weight: 900;
-    margin-right: 10px;
-    transition: background 0.2s;
-    z-index: 1;
-    margin: 0 auto;
-}
-
-#developper:hover {
-    background: #ddd;
 }
 
 #map {
@@ -151,7 +133,7 @@ html, body {
     padding-top: 2%;
 }
 
-.texte, #valider, .butetoile{
+.texte, #valider, .butetoile, .boutons{
     border-radius: 20px;
     height: 40%;
     width: 100%;
@@ -164,7 +146,7 @@ html, body {
     box-shadow: 0px 1px 5px rgb(139, 132, 132);
 }
 
-.texte:hover, #valider:hover, .butetoile:hover {
+.texte:hover, #valider:hover, .butetoile:hover, .boutons:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
@@ -213,7 +195,6 @@ html, body {
 textarea {
     resize: none;
     height: 50%;
-    margin-bottom: 10%;
 }
 
 #ombre {
@@ -241,7 +222,7 @@ textarea {
     right: 0;
     width: 1%;
     height: 1%;
-    z-index: 3;
+    z-index: 21;
     background-image: url("Fond.png");
     display: flex;
     flex-direction: column;
