--- a/Projet/stylePoints.css
+++ b/Projet/stylePoints.css
@@ -11,5 +11,48 @@ body {
 }
 
 .champ {
-    margin: 20px 0;
+    margin: 20px 0 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.boutons {
+    margin: 0;
+    padding: 10px 15px;
+}
+
+#boutons {
+    align-self: flex-end;
+    display: flex;
+    gap: 10px;
+}
+
+#oui, #non {
+    width: 30%;
+    margin: 0 10px;
+}
+
+.verif {
+    position: absolute;
+    height: 20%;
+    width: 30%;
+    top: 40%;
+    left: 35%;
+    background: url("Fond.png");
+    border-radius: 20px;
+    color: #fff;
+    background-size: cover;
+    text-shadow: 0px 1px 5px rgb(0, 0, 0);
+    z-index: 30;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    visibility: hidden;
+}
+
+.verif h1 {
+    flex: 100%;
+    text-align: center;
+    margin: 10px 0;
 }
